--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             
             <div class="example">
-                <h3>Another Example:</h3>
+                <h3>Full Steps:</h3>
                 <p>Multiply: $$(2x - 3)(5x + 1)$$</p>
                 <div class="solution">
                     <p>Using FOIL:</p>
@@ -431,7 +431,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Multiplying Polynomials. Created by Jason Cameron, Angela, Shelley Berlov & Maxim</p>
+            <p>&copy; 2025 Multiplying Polynomials. Created by Jason Cameron, Angela Afsar, Shelley Berlov & Maxim Tucovic</p>
         </div>
     </footer>
 
